# doc2graph

./: .env.example  .gitignore  README.md  doc2graph.py  doc2graph_multi_files.py  doc2graph_pathced.py  dock_test_generator.py  patch_html.py  pyproject.toml  requirements.txt  run_doc2graph.sh
doc2graph/: __init__.py  __main__.py  checkpoint.py  chunker.py  cli.py  config.py  exporter.py  extractors.py  graph.py  llm.py  pipeline.py  renderer.py
templates/: graph.html.jinja2
tests/: conftest.py  test_all.py
